Maky take some time status Subscription pill alignment fix fix

--- a/FrontEnd/src/app/shared/components/load-screen/load-screen.component.css
+++ b/FrontEnd/src/app/shared/components/load-screen/load-screen.component.css
@@ -4,3 +4,6 @@
     overflow-y: hidden !important;
 }
 
+.takeWhile{
+    transition: 1s ease-in-out;
+}
